[project]
name = "rl-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "grid-world",
    "gym>=0.26.2",
    "isort>=5.13.2",
    "matplotlib>=3.10.0",
    "mypy>=1.14.0",
    "numpy==1.23.5",
    "pre-commit>=4.0.1",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "rl-util",
    "setuptools>=75.6.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
grid-world = { path = "src/grid_world_pkg" }
rl-util = { path = "src/rl_util_pkg" }
